--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rarebearsoft/marvin": "^0.0.2",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "fabric": "^4.5.0",
     "firebase": "^8.6.1",
     "formik": "^2.2.6",
     "jsreport-browser-client-dist": "^1.3.0",
+    "marvinj": "^1.0.0",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
