--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "color": "^3.1.3",
     "fabric": "^4.5.0",
     "firebase": "^8.6.1",
+    "font-color-contrast": "^1.0.3",
     "formik": "^2.2.6",
     "jsreport-browser-client-dist": "^1.3.0",
+    "libphonenumber-js": "^1.9.19",
     "marvinj": "^1.0.0",
     "numeral": "^2.0.6",
     "react": "^17.0.2",
