--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "clsx": "^1.1.1",
     "color": "^3.1.3",
     "fabric": "^4.5.0",
     "firebase": "^8.6.1",
