--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "numeral": "^2.0.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-number-format": "^4.6.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
