agregando el jszip y el renderizado de imagenes segun las props

--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "clsx": "^1.1.1",
     "color": "^3.1.3",
     "fabric": "^4.5.0",
+    "file-saver": "^1.3.2",
     "firebase": "^8.6.1",
     "font-color-contrast": "^1.0.3",
     "formik": "^2.2.6",
     "jsreport-browser-client-dist": "^1.3.0",
+    "jszip": "^3.6.0",
     "libphonenumber-js": "^1.9.19",
     "marvinj": "^1.0.0",
     "numeral": "^2.0.6",
