terminando el modal y agregando algolia al proyecto

--- a/src/config.json
+++ b/src/config.json
@@ -129,5 +129,6 @@
             "value": "retail",
             "iconClass": "fas fa-user-friends"
         }
-    ]
+    ],
+    "whatsapp": "+57 318 2657709"
 }
