--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "algoliasearch": "^4.9.3",
     "axios": "^0.21.1",
     "clsx": "^1.1.1",
     "color": "^3.1.3",
