--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "fabric": "^4.5.0",
     "file-saver": "^1.3.2",
     "firebase": "^8.6.1",
+    "firebase-admin": "^11.0.0",
     "font-color-contrast": "^1.0.3",
     "formik": "^2.2.6",
     "jsreport-browser-client-dist": "^1.3.0",
@@ -36,7 +37,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "algolia:sync": "node ./src/syncAlgoliaScript.js"
   },
   "eslintConfig": {
     "extends": [
@@ -55,5 +57,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.1"
   }
 }
